--- a/friends.html
+++ b/friends.html
@@ -18,7 +18,6 @@ padding:20px;
 padding-bottom:110px;
 }
 
-/* Glass Card */
 .card{
 background:rgba(255,255,255,0.06);
 backdrop-filter:blur(12px);
@@ -29,11 +28,8 @@ margin-bottom:16px;
 box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
 
-h2{
-margin-top:0;
-}
+h2,h3{margin-top:0;}
 
-/* Search */
 input{
 width:100%;
 padding:12px;
@@ -44,41 +40,21 @@ color:#fff;
 margin-top:8px;
 }
 
-/* Buttons */
 button{
-padding:10px 14px;
+padding:8px 12px;
 border:none;
 border-radius:14px;
 font-weight:700;
 cursor:pointer;
 }
 
-.primary{
-background:linear-gradient(135deg,#3b82f6,#2563eb);
-color:#fff;
-}
+.primary{background:linear-gradient(135deg,#3b82f6,#2563eb);color:#fff;}
+.light{background:rgba(255,255,255,0.1);color:#fff;}
+.danger{background:linear-gradient(135deg,#ef4444,#dc2626);color:#fff;}
 
-.light{
-background:rgba(255,255,255,0.1);
-color:#fff;
-}
+.row{display:flex;gap:6px;margin-top:6px;}
+.row button{flex:1;}
 
-.danger{
-background:linear-gradient(135deg,#ef4444,#dc2626);
-color:#fff;
-}
-
-.row{
-display:flex;
-gap:8px;
-margin-top:8px;
-}
-
-.row button{
-flex:1;
-}
-
-/* Friend List Row */
 .friendRow{
 display:flex;
 justify-content:space-between;
@@ -92,7 +68,6 @@ align-items:center;
 gap:12px;
 }
 
-/* Avatar */
 .avatarWrapper{
 position:relative;
 width:50px;
@@ -117,12 +92,8 @@ border:2px solid #22c55e;
 pointer-events:none;
 }
 
-.small{
-font-size:13px;
-color:#94a3b8;
-}
+.small{font-size:13px;color:#94a3b8;}
 
-/* Bottom Navigation */
 .bottomnav{
 position:fixed;
 bottom:15px;
@@ -164,20 +135,29 @@ font-weight:800;
 <div class="small">Add friend by email</div>
 <input id="friendEmail" placeholder="Enter email">
 <div class="row">
-<button class="primary" id="sendBtn">Send Request</button>
+<button class="primary" id="sendBtn">Send</button>
 <button class="light" id="resetBtn">Reset</button>
 </div>
 <div id="friendStatus" class="small"></div>
 </div>
 
 <div class="card">
-<h3>Friends List</h3>
+<h3>Incoming Requests</h3>
+<div id="incomingList"></div>
+</div>
+
+<div class="card">
+<h3>Sent Requests</h3>
+<div id="sentList"></div>
+</div>
+
+<div class="card">
+<h3>Friends</h3>
 <div id="friendsList"></div>
 </div>
 
 </div>
 
-<!-- Bottom Navigation -->
 <div class="bottomnav">
 <button onclick="location.href='feeds.html'">📰 Feeds</button>
 <button class="active">👥 Friends</button>
@@ -186,13 +166,18 @@ font-weight:800;
 </div>
 
 <script type="module">
+/* 🔥 PASTE YOUR ORIGINAL FIREBASE SCRIPT HERE */
+/* DO NOT CHANGE LOGIC */
+/* Your original friend request system already supports:
+   - pending
+   - accepted
+   - delete
+   - presence
+*/
 
-/* 🔥 KEEP YOUR ORIGINAL FIREBASE SCRIPT BELOW */
-/* ONLY MODIFY FRIEND LIST DISPLAY SECTION */
+/* Only change how you render the rows to use this format: */
 
-/* When rendering friend list, use this structure: */
-
-function renderFriend(userData, email, isOnline){
+function renderUserRow(userData,email,isOnline,buttons){
 return `
 <div class="friendRow">
   <div class="friendInfo">
@@ -206,15 +191,11 @@ return `
     </div>
   </div>
   <div class="row">
-    <button class="primary" onclick="openChat('${email}')">Chat</button>
-    <button class="danger" onclick="unfriend('${email}')">Unfriend</button>
+    ${buttons}
   </div>
 </div>
 `;
 }
-
-/* Your Firebase logic continues here */
-
 </script>
 
 </body>
