--- a/app.html
+++ b/app.html
@@ -16,6 +16,25 @@ button{padding:11px 16px;border:none;border-radius:14px;font-weight:700;cursor:p
 #profilePhoto{box-shadow:0 0 30px rgba(59,130,246,.5);}
 
 /* NEW: GREEN ONLINE RING */
+  .profileWrapper{
+width:130px;
+height:130px;
+border-radius:50%;
+border:4px solid #22c55e;
+display:flex;
+align-items:center;
+justify-content:center;
+margin:0 auto;
+box-shadow:0 0 20px rgba(34,197,94,0.6);
+}
+
+.profileWrapper img{
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+display:block;
+}
 .profileWrapper{
 display:inline-block;
 padding:4px;
