--- a/app.html
+++ b/app.html
@@ -16,26 +16,27 @@ button{padding:11px 16px;border:none;border-radius:14px;font-weight:700;cursor:p
 #profilePhoto{box-shadow:0 0 30px rgba(59,130,246,.5);}
 
 /* NEW: GREEN ONLINE RING */
- .profileWrapper{
+.profileWrapper{
 width:130px;
 height:130px;
 border-radius:50%;
-border:4px solid #22c55e;
+padding:5px;
+background:#22c55e;
+margin:0 auto;
 display:flex;
 align-items:center;
 justify-content:center;
-margin:0 auto;
-box-shadow:0 0 20px rgba(34,197,94,0.6);
-overflow:hidden;
+box-shadow:0 0 12px rgba(34,197,94,0.5); /* softer glow */
 }
 
 .profileWrapper img{
 width:100%;
 height:100%;
-object-fit:cover;
 border-radius:50%;
-display:block;
+object-fit:cover;
+border:4px solid #1e293b;
 }
+
 <!-- FEEDS PLACEHOLDER -->
 <div id="feedsPage" class="page">
 <h2>📰 Feeds</h2>
