--- a/app.html
+++ b/app.html
@@ -16,27 +16,28 @@ button{padding:11px 16px;border:none;border-radius:14px;font-weight:700;cursor:p
 #profilePhoto{box-shadow:0 0 30px rgba(59,130,246,.5);}
 
 /* NEW: GREEN ONLINE RING */
-.profileWrapper{
-width:130px;
-height:130px;
-border-radius:50%;
-padding:5px;
-background:#22c55e;
-margin:0 auto;
-display:flex;
-align-items:center;
-justify-content:center;
-box-shadow:0 0 12px rgba(34,197,94,0.5); /* softer glow */
-}
-
 .profileWrapper img{
-width:100%;
-height:100%;
+width:120px;
+height:120px;
 border-radius:50%;
 object-fit:cover;
-border:4px solid #1e293b;
+display:block;
 }
-
+.profileWrapper{
+display:inline-block;
+padding:4px;
+border-radius:50%;
+background:linear-gradient(45deg,#22c55e,#16a34a);
+box-shadow:0 0 20px rgba(34,197,94,0.7);
+}
+.profileWrapper img{
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+display:block;
+}
+</style></head><body>
 <!-- FEEDS PLACEHOLDER -->
 <div id="feedsPage" class="page">
 <h2>📰 Feeds</h2>
