--- a/feeds.html
+++ b/feeds.html
@@ -1,39 +1,220 @@
-📰 Crew Feeds
-Create Post
-Post
-👥 Friends
-Friends feature coming soon
-💬 Messages
-Messenger coming soon
+<!DOCTYPE html>
+<html>
+
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>SeaConnect</title>
+
+<style>
+
+body{
+margin:0;
+font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
+background:linear-gradient(180deg,#0f172a,#1e293b);
+color:#f1f5f9;
+}
+
+.page{
+display:none;
+padding:20px;
+padding-bottom:95px;
+}
+
+.card{
+background:rgba(255,255,255,0.06);
+backdrop-filter:blur(12px);
+border:1px solid rgba(255,255,255,0.08);
+padding:18px;
+border-radius:22px;
+margin-bottom:16px;
+box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+
+input{
+width:100%;
+padding:12px;
+border-radius:14px;
+border:1px solid rgba(255,255,255,0.15);
+margin-top:6px;
+box-sizing:border-box;
+background:rgba(255,255,255,0.05);
+color:#fff;
+}
+
+button{
+padding:11px 16px;
+border:none;
+border-radius:14px;
+font-weight:700;
+cursor:pointer;
+}
+
+.primary{
+background:linear-gradient(135deg,#3b82f6,#2563eb);
+color:#fff;
+}
+
+.danger{
+background:linear-gradient(135deg,#ef4444,#dc2626);
+color:#fff;
+}
+
+.light{
+background:rgba(255,255,255,0.1);
+color:#fff;
+}
+
+.row{
+display:flex;
+gap:10px;
+margin-top:12px;
+}
+
+.subText{
+font-size:13px;
+color:#94a3b8;
+}
+
+/* ONLINE RING */
+
+.profileRing{
+display:inline-block;
+padding:3px;
+border-radius:50%;
+}
+
+.profileRing.online{
+box-shadow:0 0 0 3px #22c55e;
+}
+
+/* NAV */
+
+.bottomnav{
+position:fixed;
+bottom:15px;
+left:50%;
+transform:translateX(-50%);
+width:90%;
+height:65px;
+background:rgba(15,23,42,0.9);
+backdrop-filter:blur(10px);
+border-radius:22px;
+display:flex;
+justify-content:space-around;
+align-items:center;
+box-shadow:0 10px 40px rgba(0,0,0,.6);
+}
+
+.bottomnav button{
+background:none;
+border:none;
+font-size:12px;
+font-weight:600;
+color:#94a3b8;
+}
+
+.bottomnav button.active{
+color:#3b82f6;
+font-weight:800;
+}
+
+#profilePhoto{
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+border:4px solid #e5e7eb;
+}
+
+</style>
+</head>
+
+<body>
+
+<!-- PROFILE PAGE -->
+
+<div id="profilePage" class="page" style="display:block;">
+
+<div style="display:flex;justify-content:space-between;">
+<h2>👤 My Profile</h2>
+<button class="danger" onclick="logout()">Logout</button>
+</div>
+
+<div class="card" style="text-align:center">
+
+<div id="profileRing" class="profileRing">
+
+<img id="profilePhoto"
+src="https://i.ibb.co/2kRZ7Z6/avatar.png">
+
+</div>
+
+<br><br>
+
+<input type="file" id="photoInput" accept="image/*" style="display:none">
+
+<button class="primary"
+onclick="document.getElementById('photoInput').click()">
+Upload Photo
+</button>
+
+<br><br>
+
+<div id="profileName"
+style="font-size:24px;font-weight:900"></div>
+
+<div id="profileRank"
+style="color:#6b7280"></div>
+
+</div>
+
+</div>
+
+<!-- NAVIGATION -->
+
+<div class="bottomnav">
+
+<button onclick="location.href='feeds.html'">
 📰 Feeds
+</button>
+
+<button>
 👥 Friends
+</button>
+
+<button>
 💬 Messages
+</button>
+
+<button class="active">
 👤 Profile
+</button>
 
+</div>
 
-import { initializeApp } 
-from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+<script type="module">
+
+import { initializeApp } from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
 import {
 getAuth,
-onAuthStateChanged
+onAuthStateChanged,
+signOut
 }
-from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
 import {
 getFirestore,
-collection,
-addDoc,
-query,
-orderBy,
-onSnapshot,
 doc,
 getDoc,
-deleteDoc,
-updateDoc,
-where
+setDoc,
+updateDoc
 }
-from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -45,31 +226,9 @@ const app=initializeApp(firebaseConfig);
 const auth=getAuth(app);
 const db=getFirestore(app);
 
-const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
-
 let currentUID=null;
-let currentEmail="";
-let isPosting=false;
 
-const feedsList=document.getElementById("feedsList");
-
-/* NAV */
-
-window.showPage=function(id,btn){
-
-document.querySelectorAll(".page")
-.forEach(p=>p.style.display="none");
-
-document.querySelectorAll(".bottomnav button")
-.forEach(b=>b.classList.remove("active"));
-
-document.getElementById(id).style.display="block";
-
-if(btn) btn.classList.add("active");
-
-};
-
-/* AUTH */
+const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
 onAuthStateChanged(auth,async(user)=>{
 
@@ -79,57 +238,64 @@ return;
 }
 
 currentUID=user.uid;
-currentEmail=user.email;
 
-/* SET ONLINE */
+setOnline(true);
+
+loadProfile();
+
+});
+
+async function setOnline(state){
 
 await updateDoc(doc(db,"users",currentUID),{
-online:true,
-lastSeen:Date.now()
+online:state,
+lastActive:Date.now()
 });
 
-showPage("feedsPage");
-
-loadFeeds();
-
-});
-
-/* SET OFFLINE WHEN LEAVING */
-
-window.addEventListener("beforeunload",async()=>{
-
-if(currentUID){
-await updateDoc(doc(db,"users",currentUID),{
-online:false,
-lastSeen:Date.now()
-});
 }
 
+window.addEventListener("beforeunload",()=>{
+setOnline(false);
 });
 
-/* CREATE POST */
+async function loadProfile(){
 
-window.createFeed=async function(){
+const snap=await getDoc(doc(db,"users",currentUID));
 
-if(isPosting) return;
+const d=snap.data()||{};
 
-const btn=document.getElementById("postBtn");
-const msg=document.getElementById("postMsg");
+if(d.photo){
+profilePhoto.src=d.photo;
+}
 
-isPosting=true;
+profileName.innerText=d.name||"";
+profileRank.innerText=d.rank||"";
 
-btn.disabled=true;
-btn.innerText="Posting...";
-msg.innerText="Uploading...";
+/* ONLINE RING */
 
-try{
+const ring=document.getElementById("profileRing");
 
-const text=document.getElementById("feedInput").value.trim();
-const file=document.getElementById("feedPhoto").files[0];
+if(d.online){
+ring.classList.add("online");
+}else{
+ring.classList.remove("online");
+}
 
-let photoURL="";
+}
 
-if(file){
+document.getElementById("photoInput")
+.addEventListener("change",async function(){
+
+const file=this.files[0];
+if(!file) return;
+
+const reader=new FileReader();
+
+reader.onload=function(e){
+profilePhoto.src=e.target.result;
+};
+
+reader.readAsDataURL(file);
 
 const formData=new FormData();
 formData.append("image",file);
@@ -141,260 +307,25 @@ const res=await fetch(
 
 const data=await res.json();
 
-if(data.success){
-photoURL=data.data.url;
-}
+const imageUrl=data.data.url;
 
-}
+await setDoc(doc(db,"users",currentUID),{
+photo:imageUrl
+},{merge:true});
 
-const userSnap=await getDoc(doc(db,"users",currentUID));
-const userData=userSnap.data()||{};
-
-await addDoc(collection(db,"feeds"),{
-
-uid:currentUID,
-name:userData.name || currentEmail.split("@")[0],
-rank:userData.rank || "",
-photoProfile:userData.photo || "",
-text:text,
-photo:photoURL,
-likes:[],
-createdAt:Date.now()
+alert("Photo uploaded successfully");
 
 });
 
-document.getElementById("feedInput").value="";
-document.getElementById("feedPhoto").value="";
-document.getElementById("previewPhoto").style.display="none";
+window.logout=async function(){
 
-msg.innerText="✅ Posted";
+await signOut(auth);
 
-btn.disabled=false;
-btn.innerText="Post";
-
-isPosting=false;
-
-setTimeout(()=>msg.innerText="",2000);
-
-}catch(e){
-
-alert("Post failed");
-
-btn.disabled=false;
-btn.innerText="Post";
-
-isPosting=false;
-
-}
+location.href="index.html";
 
 };
 
-/* LOAD FEEDS */
+</script>
 
-function loadFeeds(){
-
-const q=query(collection(db,"feeds"),orderBy("createdAt","desc"));
-
-onSnapshot(q,(snap)=>{
-
-feedsList.innerHTML="";
-
-snap.forEach(async docSnap=>{
-
-const d=docSnap.data();
-const id=docSnap.id;
-
-const likesArr=d.likes||[];
-const liked=likesArr.includes(currentUID);
-
-/* GET ONLINE STATUS */
-
-let online=false;
-
-try{
-const userSnap=await getDoc(doc(db,"users",d.uid));
-const userData=userSnap.data();
-online=userData?.online || false;
-}catch{}
-
-feedsList.innerHTML+=`
-
-<div class="card">
-
-<div style="display:flex;gap:10px;align-items:center;">
-
-<img src="${d.photoProfile || 'https://i.ibb.co/2kRZ7Z6/avatar.png'}"
-class="avatar ${online ? 'online' : ''}">
-
-<div>
-<div style="font-weight:900">${d.name}</div>
-<div class="subText">${d.rank || ""}</div>
-</div>
-
-</div>
-
-<div style="margin-top:10px">${d.text||""}</div>
-
-${d.photo?`<img src="${d.photo}" class="feedPhoto">`:""}
-
-<div class="row">
-
-<button class="likeBtn ${liked?"liked":""}"
-onclick="toggleLike('${id}')">
-
-${liked?"💙 Liked":"👍 Like"}
-
-</button>
-
-<span class="subText">${likesArr.length} likes</span>
-
-${d.uid===currentUID?`
-<button class="danger" onclick="deletePost('${id}')">Delete</button>
-`:""}
-
-</div>
-
-<div style="margin-top:10px">
-
-<input id="commentInput-${id}" placeholder="Write comment">
-
-<button onclick="sendComment('${id}')">Send</button>
-
-<div id="comments-${id}"></div>
-
-</div>
-
-</div>
-
-`;
-
-loadComments(id);
-
-});
-
-});
-
-}
-
-/* LIKE */
-
-window.toggleLike=async function(id){
-
-const ref=doc(db,"feeds",id);
-const snap=await getDoc(ref);
-
-let likes=snap.data().likes||[];
-
-if(likes.includes(currentUID)){
-likes=likes.filter(x=>x!==currentUID);
-}else{
-likes.push(currentUID);
-}
-
-await updateDoc(ref,{likes});
-
-};
-
-/* DELETE POST */
-
-window.deletePost=async function(id){
-
-if(confirm("Delete post?")){
-await deleteDoc(doc(db,"feeds",id));
-}
-
-};
-
-/* COMMENTS */
-
-window.sendComment=async function(feedId){
-
-const input=document.getElementById("commentInput-"+feedId);
-const text=input.value.trim();
-
-if(!text) return;
-
-await addDoc(collection(db,"comments"),{
-
-feedId:feedId,
-uid:currentUID,
-name:"User",
-text:text,
-createdAt:Date.now()
-
-});
-
-input.value="";
-
-};
-
-function loadComments(feedId){
-
-const q=query(collection(db,"comments"),where("feedId","==",feedId));
-
-onSnapshot(q,(snap)=>{
-
-const box=document.getElementById("comments-"+feedId);
-
-if(!box) return;
-
-box.innerHTML="";
-
-snap.forEach(docSnap=>{
-
-const d=docSnap.data();
-
-box.innerHTML+=`
-
-<div class="comment">
-
-<div>
-<b>${d.name}</b>: ${d.text}
-</div>
-
-${d.uid===currentUID?`
-<button class="danger"
-onclick="deleteComment('${docSnap.id}')">
-Delete
-</button>
-`:""}
-
-</div>
-
-`;
-
-});
-
-});
-
-}
-
-window.deleteComment=async function(id){
-
-if(confirm("Delete comment?")){
-await deleteDoc(doc(db,"comments",id));
-}
-
-};
-
-/* IMAGE PREVIEW */
-
-document.getElementById("feedPhoto").addEventListener("change",function(){
-
-const file=this.files[0];
-
-if(!file) return;
-
-const reader=new FileReader();
-
-reader.onload=function(e){
-
-document.getElementById("previewPhoto").src=e.target.result;
-document.getElementById("previewPhoto").style.display="block";
-
-};
-
-reader.readAsDataURL(file);
-
-});
-
+</body>
+</html>
